--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,9 @@
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">google.charts.load('current', { 'packages': ['corechart'] });</script>
 
-  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
 
   <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
 
@@ -141,6 +143,14 @@
   <script src="/src/bridge/consistentwriter.js"></script>
   <script src="/src/bridge/pathfindingreader.js"></script>
 
+  <!-- Firestore items -->
+  <script src="/src/bridge/remote/firestore/classmodels/game.js"></script>
+  <script src="/src/bridge/remote/firestore/classmodels/player.js"></script>
+  <script src="/src/bridge/remote/firestore/firestoreoperations.js"></script>
+  <script src="/src/bridge/remote/firestore/utils/dataconverterutils.js"></script>
+  <script src="/src/bridge/remote/firestore/constants/gamepath.js"></script>
+  <script src="/src/bridge/remote/firestore/constants/playerpath.js"></script>
+
   <link rel="import" href="/src/active/active.html">
   <link rel="import" href="/src/active/inactive-dialog.html">
   <link rel="import" href="/src/admin/admin.html">
@@ -185,6 +195,8 @@
   <link rel="import" href="/src/game/create-game.html">
   <link rel="import" href="/src/game/create-populated-game.html">
   <link rel="import" href="/src/game/game-details.html">
+  <link rel="import" href="/src/game/game-list.html">
+  <link rel="import" href="/src/game/game-list-item.html">
   <link rel="import" href="/src/game/game-summary.html">
   <link rel="import" href="/src/gamestats/game-stat-summary.html">
   <link rel="import" href="/src/gamestats/population-current.html">
