Slight refactor of fakedatabase

--- a/web/index.html
+++ b/web/index.html
@@ -157,6 +157,7 @@
   <script src="/src/bridge/remote/firestore/constants/grouppath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/playerpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/rewardpath.js"></script>
+  <script src="/src/bridge/remote/firestore/constants/userpath.js"></script>
 
   <!-- Fake/Local Server items -->
   <script src="/src/bridge/fake/firestore/fakedatabase.js"></script>
