Add fake user to fake database

--- a/web/index.html
+++ b/web/index.html
@@ -150,6 +150,7 @@
   <script src="/src/bridge/remote/firestore/classmodels/group.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/player.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/reward.js"></script>
+  <script src="/src/bridge/remote/firestore/classmodels/user.js"></script>
   <script src="/src/bridge/remote/firestore/firestoreoperations.js"></script>
   <script src="/src/bridge/remote/firestore/utils/dataconverterutils.js"></script>
   <script src="/src/bridge/remote/firestore/constants/chatpath.js"></script>
