Migrate chat room messages to firestore data structure

--- a/web/index.html
+++ b/web/index.html
@@ -148,6 +148,7 @@
   <script src="/src/bridge/remote/firestore/classmodels/chatroom.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/game.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/group.js"></script>
+  <script src="/src/bridge/remote/firestore/classmodels/message.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/player.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/reward.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/user.js"></script>
