--- a/web/src/game/game-list.html
+++ b/web/src/game/game-list.html
@@ -38,6 +38,7 @@
 
         getGameList_() {
           this.bridge.getGameList(this.userId).then(gameArray => {
+            debugger
             this.games = gameArray;
           });
         },
