--- a/web/src/main/desktop-main.html
+++ b/web/src/main/desktop-main.html
@@ -96,8 +96,12 @@
         },
 
         chatIsVisible_(membership) {
-          return ChatUtils.chatIsVisible(this.game.chatRoomsById[membership.chatRoomId], membership);
+          return ChatUtils.chatIsVisible(membership);
         },
+
+        toArray_(membershipMap) {
+          return Utils.toArray(membershipMap)
+        }
       });
     });
   </script>
@@ -189,19 +193,19 @@
           </ghvz-game-summary>
         </ghvz-card>
 
-        <ghvz-card spaced scrolling left name="leaderboard-box">
+        <!-- <ghvz-card spaced scrolling left name="leaderboard-box">
           <div class="header">Leaderboard</div>
           <ghvz-leaderboard-summary game="[[game]]" limit="3">
           </ghvz-leaderboard-summary>
-        </ghvz-card>
-
+        </ghvz-card> -->
+        <!-- 
         <template is="dom-if" if="[[isDeclared]]">
           <ghvz-card spaced left fullscreen-page="stats" name="stats-box">
             <div class="header">Game Stats</div>
             <ghvz-game-stat-summary game="[[game]]">
             </ghvz-game-stat-summary>
           </ghvz-card>
-        </template>
+        </template> -->
 
         <template is="dom-if" if="[[isDeclared]]">
           <ghvz-card name="rewards-box" spaced left>
@@ -211,12 +215,12 @@
           </ghvz-card>
         </template>
 
-        <template is="dom-repeat" items="[[player.private.chatRoomMemberships]]" as="membership">
+        <template is="dom-repeat" items="[[toArray_(player.chatRoomMemberships)]]" as="membership">
           <div right>
-            <template is="dom-if" if="[[chatIsVisible_(membership, membership.lastHiddenTime)]]">
+            <template is="dom-if" if="[[membership.value.isVisible]]">
               <ghvz-card spaced>
                 <ghvz-chat-room small bridge="[[bridge]]" game="[[game]]" is-admin="[[isAdmin]]"
-                  current-player="[[player]]" chat-room-id="[[membership.chatRoomId]]">
+                  current-player="[[player]]" chat-room-id="[[membership.key]]">
                 </ghvz-chat-room>
               </ghvz-card>
             </template>
