Implement real server methods to get up to speed with fake server
Implements player, group, and chat fetch methods to mirror what we've got working in fake server so far.

--- a/web/src/chat/chat-room.html
+++ b/web/src/chat/chat-room.html
@@ -114,6 +114,9 @@
                 this.bridge.listenToChatRoomMessages(this.game.id, chatRoomId).then(messages => {
                   this.showLoadingSpinner = false;
                   this.messages = messages;
+                  for (let message of messages) {
+                    console.log(message)
+                  }
                 });
               });
             });
