--- a/web/src/profile/profile-page.html
+++ b/web/src/profile/profile-page.html
@@ -65,9 +65,11 @@
         },
 
         onPlayerIdChanged_() {
-          this.bridge.listenToPlayer(this.game.id, this.playerId).then(player => {
-            this.player = player;
-          });
+          let self = this;
+          let playerUpdatedCallback = function (playerId, player) {
+            self.player = player;
+          }
+          this.bridge.listenToPlayer(this.game.id, this.playerId, playerUpdatedCallback);
         },
 
         onPathChanged_() {
