Implement infection and claiming rewards

--- a/web/index.html
+++ b/web/index.html
@@ -146,6 +146,7 @@
 
   <!-- Firestore items -->
   <script src="/src/bridge/remote/firestore/classmodels/chatroom.js"></script>
+  <script src="/src/bridge/remote/firestore/classmodels/claimcode.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/game.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/group.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/message.js"></script>
